manifests/concourse/templates/web-deployment.yaml
---
# Source: concourse/templates/web-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: release-name-web
  labels:
    app: release-name-web
    chart: "concourse-6.2.1"
    release: "release-name"
    heritage: "Tiller"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: release-name-web
        release: "release-name"
    spec:
      serviceAccountName: release-name-web
      containers:
        - name: release-name-web
          image: "concourse/concourse:5.2.0"
          imagePullPolicy: "IfNotPresent"
          args:
            - web
          ports:
            - name: atc
              containerPort: 80
            - name: tsa
              containerPort: 2222
            - name: atc-debug
              containerPort: 8079
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/v1/info
              port: atc
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 3
            
          readinessProbe:
            httpGet:
              path: /api/v1/info
              port: atc
            
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            
          volumeMounts:
            - name: concourse-keys
              mountPath: "/concourse-keys"
              readOnly: true
            - name: auth-keys
              mountPath: "/concourse-auth"
              readOnly: true
      volumes:
        - name: concourse-keys
          secret:
            secretName: release-name-web
            defaultMode: 0400
            items:
              - key: host-key
                path: host_key
              - key: session-signing-key
                path: session_signing_key
              - key: worker-key-pub
                path: worker_key.pub
        - name: auth-keys
          secret:
            secretName: release-name-web
            defaultMode: 0400
            items:
