manifests/concourse/templates/web-svc.yaml
---
# Source: concourse/templates/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-web
  labels:
    app: release-name-web
    chart: "concourse-6.2.1"
    release: "release-name"
    heritage: "Tiller"
spec:
  type: ClusterIP
  
  
  ports:
    - name: atc
      port: 80
      targetPort: atc
      
    - name: tsa
      port: 2222
      targetPort: tsa
      
  selector:
    app: release-name-web
