manifests/concourse/templates/worker-svc.yaml
---
# Source: concourse/templates/worker-svc.yaml
## A Headless Service is required when using a StatefulSet
## ref: https://kubernetes.io/docs/tutorials/stateful-application/basic-stateful-set/
##
apiVersion: v1
kind: Service
metadata:
  name: release-name-worker
  labels:
    app: release-name-worker
    chart: "concourse-6.2.1"
    release: "release-name"
    heritage: "Tiller"
spec:
  type: ClusterIP
  clusterIP: None
  ## We do NOT expose any port as workers will forward connections with the ATC through a TSA reverse-tunnel
  ## ref: https://concourse-ci.org/architecture.html#architecture-worker
  ##
  ports: []
  selector:
    app: release-name-worker
