manifests/concourse/templates/web-ingress.yaml
---
# Source: concourse/templates/web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: release-name-web
  labels:
    app: release-name-web
    chart: "concourse-6.2.1"
    release: "release-name"
    heritage: "Tiller"
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: concourse.nginx.haas-419.pez.pivotal.io
      http:
        paths:
          - backend:
              serviceName: release-name-web
              servicePort: 80
